--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,5 +1,5 @@
 .about-section {
-  padding-top: 10rem;
+  padding: 5rem 0;
   background: linear-gradient(to bottom, $black 0%,#{fade-out($black, .1)} 75%,#{fade-out($black, .2)} 100%);
   p {
     margin-bottom: 5rem;
