[ADD] large screen responsive code for about-section

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -171,6 +171,12 @@
   margin-bottom: 5rem;
 }
 
+@media (min-width: 992px) {
+  .about-section {
+    padding: 10rem 0;
+  }
+}
+
 .projects-section {
   padding: 10rem 0;
 }
