--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,5 +1,5 @@
 .projects-section {
-  padding: 10rem 0;
+  padding: 1rem 0;
   .featured-text {
     padding: 2rem;
     @media (min-width: 992px) {
@@ -18,5 +18,8 @@
         width: 30%;
       }
     }
+  }
+  @media (min-width: 992px) {
+    padding: 10rem 0;
   }
 }
